--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "devDependencies": {
     "@cucumber/cucumber": "^9.4.0",
     "@playwright/test": "^1.37.0",
+    "@types/jest": "^29.5.3",
+    "expect": "^29.6.3",
+    "jest": "^29.6.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
