--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@cucumber/cucumber": "^9.4.0",
+    "@faker-js/faker": "^8.0.2",
     "@playwright/test": "^1.37.0",
     "@testing-library/jest-dom": "^6.1.2",
     "@types/jest": "^29.5.3",
