--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
-      // ... other options // comm for commit
       "esModuleInterop": true,
-      "resolveJsonModule": true
+      "resolveJsonModule": true,
+      "types": ["@testing-library/jest-dom","@playwright/test"],
+    
     }
-  }//
+  }
