--- a/package.json
+++ b/package.json
@@ -4,23 +4,32 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cucumber-js test"
+    "test": "cucumber-js test",
+    "report": "npx playwright test --reporter=html && npx playwright show-report"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@cucumber/cucumber": "^9.4.0",
+    "@faker-js/faker": "^8.0.2",
     "@playwright/test": "^1.37.0",
     "@testing-library/jest-dom": "^6.1.2",
     "@types/jest": "^29.5.3",
     "expect": "^29.6.3",
     "jest": "^29.6.3",
+    "luxon": "^3.4.3",
+    "mocha": "^10.2.0",
+    "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@jest/globals": "^29.6.2"
+    "@jest/globals": "^29.6.2",
+    "api-testing": "^1.6.0",
+    "axios": "^1.5.0",
+    "chai": "^4.3.8",
+    "dotenv": "^16.3.1"
   },
   "debug": "node - inspect-brk=5858./node_modules/cucumber/bine/cucumber-js test/features/**/ -t'@yourtag'"
 }
